# Chit-Chat

./: README.md  pyproject.toml
_server/: .env.example
_server/_server/: asgi.py  settings.py
_server/core/: consumers.py  models.py  routing.py  urls.py  views.py
_server/core/migrations/: 0001_initial.py
_server/core/templates/core/: index.html
_server/registration/: views.py
_server/registration/static/registration/: base.css
_server/registration/templates/registration/: base.html  sign_in.html  sign_up.html
client/: package-lock.json
client/src/: App.css  App.jsx  Chat.css  Chat.jsx  Home.css  Home.jsx  Message.css  Message.jsx  main.jsx
