[tool.poetry]
name = "Chit-Chat"
version = "0.1.0"
description = ""
authors = ["Joseph Ditton <jditton.atomic@gmail.com>, Nathan H"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
channels = {extras = ["daphne"], version = "^4.3.2"}
channels-redis = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
